src/Engine/XrEngine.Native/VoxelLightBaker.h

struct VoxelLightFieldView
{
    int32_t SizeX;
    int32_t SizeY;
    int32_t SizeZ;

    Vec3* Color[VOXEL_LIGHT_FACE_COUNT];
    Vec3* Direction[VOXEL_LIGHT_FACE_COUNT];

    int32_t CellCount;
    int32_t CellCapacity;
};
struct VoxelResolvedFace
{
    Vec4 BaseColor;
    Vec3 Normal;

    float Roughness;
    float Metallic;
};
struct VoxelLightBakeParams
{
    float RaySpacingFactor;
    float EmptyDissipation;
    float EnergyThreshold;

    int32_t MaxBounceCount;
    int32_t ThreadCount;

    VoxelLightBakeParams();
};
struct VoxelMeshResolvedFace
{
    int32_t VoxelIndex;
    int32_t Face;

    VoxelFaceData Data;
    VoxelResolvedFace Resolved;
};
struct VoxelLightEnergy
{
    Vec3 Energy;

    Vec3 DirectionR;
    Vec3 DirectionG;
    Vec3 DirectionB;
};
struct VoxelLightFace
{
    VoxelLightEnergy Incoming;
    VoxelLightEnergy Outgoing;
};
struct VoxelLightData
{
    VoxelLightFace Faces[VOXEL_LIGHT_FACE_COUNT];
};
struct VoxelLightCell
{
    int32_t Index;
    VoxelLightData Data;
};
struct VoxelLightRay
{
    Vec3 Position;
    Vec3 Direction;
    Vec3 Energy;
};
struct VoxelRayDebugState
{
    Vec3 Position;
    Vec3 Direction;
    Vec3 Energy;

    int32_t X;
    int32_t Y;
    int32_t Z;

    int32_t LastHitVoxel;
    int32_t LastAffectedVoxel;
    int32_t LastAffectedFace;

    int32_t BounceCount;

    VoxelData LastVoxel;
    VoxelLightData LastLightData;
    VoxelResolvedFace LastResolvedFaces[VOXEL_LIGHT_FACE_COUNT];
};
struct VoxelLightContributionView
{
    VoxelLightCell* Cells;
    int32_t CellCount;
};
class VoxelLightBaker;