src/Engine/XrEngine.Native/MeshVoxelizer.h

struct Vec2
{
    float X;
    float Y;
};
struct Vec3
{
    float X;
    float Y;
    float Z;
};
struct Vec4
{
    float X;
    float Y;
    float Z;
    float W;
};
struct Bounds3
{
    Vec3 Max;
    Vec3 Min;
};
    struct VertexData
    {
        Vec3 Pos;
        Vec3 Normal;
        Vec2 UV;
        Vec2 UV1;
        Vec4 Tangent;
    };
struct Int3
{
    int32_t X;
    int32_t Y;
    int32_t Z;
};
struct VoxelGridDesc
{
    Vec3 Origin;
    float VoxelSize;

    int32_t SizeX;
    int32_t SizeY;
    int32_t SizeZ;
};
struct VoxelizeMeshParams
{
    int32_t ScanSubdiv;
};
enum class VoxelStatus : int32_t
{
    Free = 0,
    Occupied = 1
};
enum class VoxelTriangleSide : int32_t
{
    None = 0,
    Front = 1,
    Back = 2
};
enum class VoxelFace : int32_t
{
    NegX = 0,
    PosX = 1,
    NegY = 2,
    PosY = 3,
    NegZ = 4,
    PosZ = 5
};
struct VoxelFaceData
{
    Vec2 UV;
    Vec2 HitPosition;           // local 0..1 coordinate on the voxel face
    int32_t TriangleId;          // -1 = no hit
    VoxelTriangleSide Side;
};
struct VoxelData
{
    VoxelStatus Status;
    float Occupancy;
    VoxelFaceData Faces[6];
};
struct MeshVoxelGridInfo
{
    Int3 Origin;                 // global voxel coordinate
    Int3 Size;
};
struct MeshVoxelGridView
{
    MeshVoxelGridInfo Info;
    const VoxelData* Voxels;
    int32_t VoxelCount;
};